# PasswordChkr

./: Cargo.toml  wasm.sh
.github/workflows/: build.yml
src/: main.rs
