[package]
name = "PasswordChkr"
version = "0.1.0"
authors = ["bs2kbs2k <bs2k@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
hex = "0.4.2"
sha-1 = "0.9.4"
surf = { version = "2.1.0", features = ["h1-client-rustls"], default-features = false }
