[package]
name = "PasswordChkr"
version = "0.1.0"
authors = ["bs2kbs2k <bs2k@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
iced = { version = "0.3.0", features = ["tokio"] }
reqwest = "0.11.3"
sha-1 = "0.9.4"
zxcvbn = "2.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wants js feature or won't compile
getrandom = { version = "0.2.2", features = ["js"] }
